SiteAdmin: fix broken layout on MessMail and modify javascript logic

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -4544,6 +4544,12 @@ div.markdown-preview {
     .mail-btn-wrap {
         text-align: center;
     }
+
+    .mess-mail-wrap {
+        input[type="text"] { 
+            margin:0;
+        }
+    }
 }
 
 // -- pull request
